Criação de contas
Pagina para criar contas adicionada

--- a/login.html
+++ b/login.html
@@ -12,12 +12,13 @@
         <div>
           <img src="https://freesvg.org/storage/img/thumb/1696251420Rhino2b.png" alt="">
         </div>
+        <h3 class="form-title">Fazer login</h3>
         <form method="post">
-          <input type="email" name="usuario" placeholder="Usuario" autofocus>
+          <input type="email" name="usuario" placeholder="Email" autofocus>
           <input type="password" name="senha" placeholder="Senha">
           <input type="submit" value="Entrar" onclick="logar(); return false">
         </form>
-        <p>Ainda não tem uma conta? <a href="">Faça seu cadastro</a></p>
+        <p>Ainda não tem uma conta? <a href="create.html">Faça seu cadastro</a></p>
       </div>
     </section>
     <script>
